addin aria-lable for logo link + some new files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <!-- Logo -->
-        <a href="./index.html"> WebStudio </a>
+        <a href="./index.html" aria-lable="Webstudio home page"> WebStudio </a>
 
         <!-- Main navigation -->
         <ul>
@@ -177,7 +177,7 @@
 
     <footer>
       <!-- Logo -->
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" aria-lable="Webstudio home page"> WebStudio </a>
 
       <!-- This part also can be call to action (<b>) but not important at the moment -->
       <p>
