--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <!-- Main navigation -->
         <ul>
           <li>
-            <a href=""> Studio </a>
+            <a href="./index.html"> Studio </a>
           </li>
           <li>
-            <a href=""> Portfolio </a>
+            <a href="./portfolio.html"> Portfolio </a>
           </li>
           <li>
             <a href=""> Contacts </a>
