--- a/index.html
+++ b/index.html
@@ -2,36 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Main page</title>
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
+    <header class="sec-header">
+      <nav class="site-nav">
         <!-- Logo -->
-        <a href="./index.html" aria-lable="Webstudio home page"> WebStudio </a>
+        <a
+          href="./index.html"
+          aria-label="Webstudio home page"
+          class="logo site-nav-item"
+        >
+          <span class="logo-accent">Web</span>Studio
+        </a>
 
         <!-- Main navigation -->
-        <ul>
+        <ul class="list">
           <li>
-            <a href="./index.html"> Studio </a>
+            <a href="./index.html" class="site-nav-item"> Studio </a>
           </li>
           <li>
-            <a href="./portfolio.html"> Portfolio </a>
+            <a href="./portfolio.html" class="site-nav-item"> Portfolio </a>
           </li>
           <li>
-            <a href=""> Contacts </a>
+            <a href="" class="site-nav-item"> Contacts </a>
           </li>
         </ul>
       </nav>
       <!-- Contacts block. The only address block at present so wrapped with address tag -->
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="contact-item">
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+110001111111"> +11 (000) 111-11-11 </a>
+            <a href="tel:+110001111111" class="contact-item">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
@@ -39,39 +50,39 @@
 
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="sec-hero">
+        <h1 class="section-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- Strengths section, hidden H2 -->
-      <section>
-        <h2>Strengths</h2>
-        <ul>
+      <section class="sec-strengths">
+        <h2 class="header-dark section-title">Strengths</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="header-dark">Strategy</h3>
+            <p class="section-text">
               Our goal is to identify the businessproblem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="header-dark">Punctuality</h3>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="header-dark">Diligence</h3>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header-dark">Technologies</h3>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,11 +91,11 @@
       </section>
 
       <!-- Services section -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="sec-services">
+        <h2 class="header-dark section-title">What are we doing</h2>
+        <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img1-services-360x300-opt.jpg"
                 alt="descktop web application"
@@ -94,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img2-services-360x300-opt.jpg"
                 alt="mobile application"
@@ -104,7 +115,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img3-services-360x300-opt.jpg"
                 alt="web application for different type of devices"
@@ -117,11 +128,11 @@
       </section>
 
       <!-- Team section -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="sec-team">
+        <h2 class="header-dark section-title">Our Team</h2>
+        <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img1-team-264x260-opt.jpg"
                 alt="Mark Guerrero product designer"
@@ -129,24 +140,24 @@
                 height="260"
               />
 
-              <h3>Mark Guerrero</h3>
+              <h3 class="header-dark">Mark Guerrero</h3>
               <p>Product Designer</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img2-team-264x260-opt.jpg"
                 alt="Tom Ford frontend developer"
                 width="264"
                 height="260"
               />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <h3 class="header-dark">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img3-team-264x260-opt.jpg"
                 alt="Camila Garcia marketing"
@@ -154,12 +165,12 @@
                 height="260"
               />
 
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
+              <h3 class="header-dark">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img4-team-264x260-opt.jpg"
                 alt="Daniel Wilson ui designer"
@@ -167,20 +178,22 @@
                 height="260"
               />
 
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer/p></p></a
-            >
+              <h3 class="header-dark">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
       <!-- Logo -->
-      <a href="./index.html" aria-lable="Webstudio home page"> WebStudio </a>
+      <a href="./index.html" aria-label="Webstudio home page" class="logo">
+        <span class="logo-accent">Web</span>Studio
+      </a>
 
       <!-- This part also can be call to action (<b>) but not important at the moment -->
-      <p>
+      <p class="section-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
