--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
   </head>
   <body>
     <!-- Header section -->
-    <header class="sec-header">
-      <nav class="site-nav">
+    <header class="header">
+      <nav class="navigation">
         <!-- Logo -->
         <a
           href="./index.html"
           aria-label="Webstudio home page"
-          class="logo site-nav-item"
+          class="logo navigation-item"
         >
           <span class="logo-accent">Web</span>Studio
         </a>
 
         <!-- Main navigation -->
-        <ul class="list">
+        <ul class="navigation-list list">
           <li>
-            <a href="./index.html" class="site-nav-item"> Studio </a>
+            <a href="./index.html" class="navigation-item"> Studio </a>
           </li>
           <li>
-            <a href="./portfolio.html" class="site-nav-item"> Portfolio </a>
+            <a href="./portfolio.html" class="navigation-item"> Portfolio </a>
           </li>
           <li>
-            <a href="" class="site-nav-item"> Contacts </a>
+            <a href="" class="navigation-item"> Contacts </a>
           </li>
         </ul>
       </nav>
       <!-- Contacts block. The only address block at present so wrapped with address tag -->
       <address>
-        <ul class="list">
+        <ul class="contact-list list">
           <li>
             <a href="mailto:info@devstudio.com" class="contact-item">
               info@devstudio.com
@@ -50,39 +50,39 @@
 
     <main>
       <!-- Hero section -->
-      <section class="sec-hero">
-        <h1 class="section-title">Effective Solutions for Your Business</h1>
+      <section class="section hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- Strengths section, hidden H2 -->
-      <section class="sec-strengths">
-        <h2 class="header-dark section-title">Strengths</h2>
-        <ul class="list">
+      <section class="section strengths">
+        <h2 class="section-title">Strengths</h2>
+        <ul class="strengths-list list">
           <li>
-            <h3 class="header-dark">Strategy</h3>
-            <p class="section-text">
+            <h3 class="item-title">Strategy</h3>
+            <p class="item-text">
               Our goal is to identify the businessproblem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="header-dark">Punctuality</h3>
-            <p class="section-text">
+            <h3 class="item-title">Punctuality</h3>
+            <p class="item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="header-dark">Diligence</h3>
-            <p class="section-text">
+            <h3 class="item-title">Diligence</h3>
+            <p class="item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="header-dark">Technologies</h3>
-            <p class="section-text">
+            <h3 class="item-title">Technologies</h3>
+            <p class="item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,11 +91,11 @@
       </section>
 
       <!-- Services section -->
-      <section class="sec-services">
-        <h2 class="header-dark section-title">What are we doing</h2>
-        <ul class="list">
+      <section class="section services">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="services-list list">
           <li>
-            <a href="" class="link">
+            <a href="./portfolio.html" class="item-link">
               <img
                 src="./images/img1-services-360x300-opt.jpg"
                 alt="descktop web application"
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="link">
+            <a href="./portfolio.html" class="item-link">
               <img
                 src="./images/img2-services-360x300-opt.jpg"
                 alt="mobile application"
@@ -115,7 +115,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="link">
+            <a href="./portfolio.html" class="item-link">
               <img
                 src="./images/img3-services-360x300-opt.jpg"
                 alt="web application for different type of devices"
@@ -128,11 +128,11 @@
       </section>
 
       <!-- Team section -->
-      <section class="sec-team">
-        <h2 class="header-dark section-title">Our Team</h2>
-        <ul class="list">
+      <section class="section team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
-            <a href="" class="link">
+            <a href="" class="item-link">
               <img
                 src="./images/img1-team-264x260-opt.jpg"
                 alt="Mark Guerrero product designer"
@@ -140,24 +140,24 @@
                 height="260"
               />
 
-              <h3 class="header-dark">Mark Guerrero</h3>
-              <p>Product Designer</p>
+              <h3 class="item-title">Mark Guerrero</h3>
+              <p class="item-text">Product Designer</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
+            <a href="" class="item-link">
               <img
                 src="./images/img2-team-264x260-opt.jpg"
                 alt="Tom Ford frontend developer"
                 width="264"
                 height="260"
               />
-              <h3 class="header-dark">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <h3 class="item-title">Tom Ford</h3>
+              <p class="item-text">Frontend Developer</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
+            <a href="" class="item-link">
               <img
                 src="./images/img3-team-264x260-opt.jpg"
                 alt="Camila Garcia marketing"
@@ -165,12 +165,12 @@
                 height="260"
               />
 
-              <h3 class="header-dark">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <h3 class="item-title">Camila Garcia</h3>
+              <p class="item-text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
+            <a href="" class="item-link">
               <img
                 src="./images/img4-team-264x260-opt.jpg"
                 alt="Daniel Wilson ui designer"
@@ -178,22 +178,22 @@
                 height="260"
               />
 
-              <h3 class="header-dark">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <h3 class="item-title">Daniel Wilson</h3>
+              <p class="item-text">UI Designer</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="footer">
       <!-- Logo -->
       <a href="./index.html" aria-label="Webstudio home page" class="logo">
         <span class="logo-accent">Web</span>Studio
       </a>
 
       <!-- This part also can be call to action (<b>) but not important at the moment -->
-      <p class="section-text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
