--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Main page</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <!-- Header section -->
