--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Main page</title>
   </head>
   <body>
@@ -55,7 +55,7 @@
       <!-- Hero section -->
       <section class="section hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="button primary">Order Service</button>
       </section>
 
       <!-- Strengths section, hidden H2 -->
@@ -104,7 +104,7 @@
                 alt="descktop web application"
                 width="360"
                 height="300"
-              />
+              >
             </a>
           </li>
           <li>
@@ -114,7 +114,7 @@
                 alt="mobile application"
                 width="360"
                 height="300"
-              />
+              >
             </a>
           </li>
           <li>
@@ -124,7 +124,7 @@
                 alt="web application for different type of devices"
                 width="360"
                 height="300"
-              />
+              >
             </a>
           </li>
         </ul>
@@ -141,7 +141,7 @@
                 alt="Mark Guerrero product designer"
                 width="264"
                 height="260"
-              />
+              >
 
               <h3 class="item-title">Mark Guerrero</h3>
               <p class="item-text">Product Designer</p>
@@ -154,7 +154,7 @@
                 alt="Tom Ford frontend developer"
                 width="264"
                 height="260"
-              />
+              >
               <h3 class="item-title">Tom Ford</h3>
               <p class="item-text">Frontend Developer</p>
             </a>
@@ -166,7 +166,7 @@
                 alt="Camila Garcia marketing"
                 width="264"
                 height="260"
-              />
+              >
 
               <h3 class="item-title">Camila Garcia</h3>
               <p class="item-text">Marketing</p>
@@ -179,7 +179,7 @@
                 alt="Daniel Wilson ui designer"
                 width="264"
                 height="260"
-              />
+              >
 
               <h3 class="item-title">Daniel Wilson</h3>
               <p class="item-text">UI Designer</p>
